--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Through-Bosnia-and-the-Herzegovina-on-foot-during-the-insurrection-August-and-September-1875_73712
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 73712-h/images/cover.jpg
 creator:
   author:
     agent_name: Evans, Arthur, Sir
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/47474
     wikipedia: https://en.wikipedia.org/wiki/Arthur_Evans
 description: Illustrated by the author.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/73712#Through-Bosnia-and-the-Herzegovina-on-foot-during-the-insurrection-August-and-September-1875
 gutenberg_issued: '2024-05-27'
 gutenberg_type: Text
 identifiers:
